--- a/gulp/index.html
+++ b/gulp/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title></title>
-        <script data-main="src/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.js"></script>
-        <!--<script src="main-bundle.min.js"></script>-->
+        <!--<script data-main="src/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.js"></script>-->
+        <script src="bundle.min.js"></script>
     </head>
     <body>
         <h1></h1>
