--- a/requirejs/index.html
+++ b/requirejs/index.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <!--<script data-main="main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.js"></script>-->
-        <script src="main-built.min.js"></script>
+        <script src="bundle.min.js"></script>
     </head>
     <body>
         <h1></h1>
